# awstuff

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py
awstuff/: Functions.py  version.py
awstuff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
awstuff/awstuff/: README.md  __init__.py
