[metadata]
name = awstuff
version = attr: awstuff.version.__version__
author = Daniel Brickell
author_email = DanielDBrickell@gmail.com
keywords = aws, etl, elt, load, s3

# add a description of your package
description = Helper functions for interacting with AWS and other misc tasks
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/dabricksta/awstuff
# download_url = https://github.com/dabricksta/awstuff/archive/refs/tags/v0000.tar.gz

# define your license and license file
license = MIT
license_files = LICENSE.txt

classifiers = 
    # for a full list of classifiers see https://pypi.org/classifiers/
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers      
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
    # list the dependencies required by your package
    boto3 >=1
    botocore >=1
    yaml >=3

python_requires = >=3.8
